@@ -18,6 +18,7 @@ http://svn.collab.net/repos/svn/tags/XXX
  * fixed: make failed direct-URL commits clean up their fs txns. (issue #1726)
  * fixed: obscure bugs in time/date string formatting. (issue #1692)
  * fixed: svn export doesn't export svn:externals. (issue #1750)
+ * fixed: svn import doesn't handle EOL or keyword translation. (issue #1756)
  * fixed: svn status -v shows unwanted status of externals (issue #1741)
  * fixed: svnserve segfault on invalid --listen-host argument.
  * detect invalid UTF8 filenames when native locale is UTF8.
